# Project-Grafkom-TB

./: ACTIVE_FILE_EXECUTION.md  ACTIVE_FILE_QUICK.md  ACTIVE_FILE_SETUP_COMPLETE.md  CMakeLists.txt  INDEX.md  MACOS_SETUP.md  MACOS_SHORTCUTS.md  QUICK_START.md  README.md  SETUP_GUIDE.md  build_and_run.sh  lightingpot
.github/: copilot-instructions.md
src/: bebas.cpp  lightingpot.cpp  main.cpp  test.cpp
